*Empty MediaWiki Message*

--- a/VC_Koeban_Krasnodar.mw
+++ b/VC_Koeban_Krasnodar.mw
@@ -1,4 +1,23 @@
-'''VC Koeban Krasnodar''' (in 't Russisch alfabet: ''Футбо́льный клуб "Куба́нь" Краснода́р / Futbol'nij klub Koeban' Krasnodar'') is e [[Rusland|Russische]] [[voetbol]]club uut [[Krasnodar]], upgericht up [[1928]]. Ze speeln in 't [[Koeban stadium]] in [[Krasnodar]].
+{{voetbolclub|
+  clubnaam = VC Koeban Krasnodar|
+  volledigenoame = ''Футбольный клуб<br> "Кубань" Краснодар''<br> (Voetbolclub<br> Koeban Krasnodar)|
+  bynoame = ''Kazaki'' |
+  opgericht = [[1928]] |
+  stadiong   = [[Koeban stadion]]<br> ([[Krasnodar]], [[Rusland]]) |
+  capaciteit = 32.000 |
+  vôorzitter = [[Image:Flag of Russia.svg|20px]] [[Aleksandr Tkatsjov]]|
+  sportief directeur =  |
+  trainer  = [[Image:Flag of Russia.svg|20px]] [[Sergej Pavlov]] |
+  competisje   = [[Russische Premier Liga]] |
+     |pattern_la1=_yellowshoulders|pattern_b1=|pattern_ra1=_yellowshoulders|
+  leftarm1=008000|body1=008000|rightarm1=008000|shorts1=008000|socks1=008000|
+  pattern_la2=_yellowshoulders|pattern_b2=|pattern_ra2=_yellowshoulders|
+  leftarm2=008000|body2=FFFF00|rightarm2=008000|shorts2=008000|socks2=008000|
+
+  geldig=2007/08
+}}
+
+'''VC Koeban Krasnodar''' (in 't Russisch alfabet: ''Футбо́льный клуб "Куба́нь" Краснода́р / Futbol'nij klub Koeban' Krasnodar'') is e [[Rusland|Russische]] [[voetbol]]club uut [[Krasnodar]], upgericht up [[1928]]. Ze speeln in 't [[Koeban stadion]] in [[Krasnodar]].
 
 == Externe koppelienge ==
 * [http://www.fckuban.ru/ Officieeln website] 
