--- a/Johan_Vermeersch.mw
+++ b/Johan_Vermeersch.mw
@@ -6,3 +6,5 @@ Vermeersch, van wien da ze grôte vôorbeeld in 't foetbol Albert De Meester (ou
 
 [[Categorie:Langemark-Poelkapelle]]
 [[Categorie:Voetbol]]
+
+[[nl:Johan Vermeersch]]
