*Empty MediaWiki Message*

--- a/Portoal:Sport.mw
+++ b/Portoal:Sport.mw
@@ -16,6 +16,7 @@ __NOTOC__
 * Butenlandse voetbolploegn: [[Liverpool FC]] · [[Manchester United]]
 * Voetbollers: [[Raoul Lambert]], [[Jan Ceulemans]], [[Franky Van der Elst]], [[Gert Verheyen]], [[Claude Verspaille]], [[Maradona]], [[Marc Degryse]], [[Lorenzo Staelens]], [[Michael Klukowski]], [[Bosko Balaban]], [[Jonathan Blondel]], [[Thomas Buffel]], [[Nicolas Lombaerts]], [[Birger Maertens]], [[Alphonse Six]], [[Stijn De Smet]], [[Tom De Sutter]]
 * Trainers: [[Francky Dury]]
+* Vôorzitters: [[Johan Vermeersch]]
 
 | width="50%" style="border: 1px solid #FFDAB9; background-color:seashell; padding:1em;" valign="top"|
 
