*Empty MediaWiki Message*

--- a/VC_Koeban_Krasnodar.mw
+++ b/VC_Koeban_Krasnodar.mw
@@ -1,4 +1,4 @@
-{{voetbolclub|
+{{beg}}{{voetbolclub|
   clubnaam = VC Koeban Krasnodar|
   volledigenoame = ''Футбольный клуб<br> "Кубань" Краснодар''<br> (Voetbolclub<br> Koeban Krasnodar)|
   bynoame = ''Kazaki'' |
