--- a/Ingrid_Seynhaeve.mw
+++ b/Ingrid_Seynhaeve.mw
@@ -1,7 +1,7 @@
 '''Ingrid Seynhaeve''' ([[Mêende]], [[28 juni]] [[1973]]) es een [[West-Vloandern|West-Vlams]] [[topmodel]].
 
 ==Carrière==
-Ingrid Seynhaeve's carrière begoste toen dat ze in [[1991]] de wedstryd [[Elite Look of the Year]] won. Sedertdien eit ze ol veel dingn verwezenlikt. Z'es model gewist vo ''Guess Clothing'', ''Ralph Lauren'' en de bikinilyne ''Victoria's Secret''. Z'eit ôok in de bikinispecial van et weireldvermoarde ''Sports Illustrated'' magazine gestoan, in [[1995]], en ip de cover van ''Elle'', ''Amica'' en ''Shape''. Ze liep modeshows va [[Michael Kors]], [[Carolina Herrera]], [[Nicole Miller]], [[Elie Saab]], [[Victoria's Secret]], [[Bella Freud]], en [[Bill Blass]].
+Ingrid Seynhaeves carrière begoste toen dat ze in [[1991]] de wedstryd [[Elite Look of the Year]] won. Sedertdien eit ze ol veel dingn verwezenlikt. Z'es model gewist vo ''Guess Clothing'', ''Ralph Lauren'' en de bikinilyne ''Victoria's Secret''. Z'eit ôok in de bikinispecial van et weireldvermoarde ''Sports Illustrated'' magazine gestoan, in [[1995]], en ip de cover van ''Elle'', ''Amica'' en ''Shape''. Ze liep modeshows va [[Michael Kors]], [[Carolina Herrera]], [[Nicole Miller]], [[Elie Saab]], [[Victoria's Secret]], [[Bella Freud]], en [[Bill Blass]].
 
 ==TV==
 Ingrid Seynhaeve wos de spilfigure in et programma 'Topmodel' ip [[Kanaal 2]] in [[2007]], woarin dat er zôgezei een ipvolgster van eur weirdt gezocht.
