*Empty MediaWiki Message*

--- a/Belgium_Ypres_Westhoek_Rally.mw
+++ b/Belgium_Ypres_Westhoek_Rally.mw
@@ -1,6 +1,44 @@
-De '''Belgium Ypres Westhoek Rally''' of oek wel ''De 24 Eurn van Yper'' is êen van de gekendste rally's van [[België]]. Dat is ôoit begunn in de joaren 't schestig mè een klêne rallysprint en een bitje mè een kêe is da gegroeid tot wuk dat nu is. 
+De '''Belgium Ypres Westhoek Rally''' of oek wel ''De 24 Eurn van Yper'' is een van de gekendste rally's van [[België]]. Dat is oois begunn in de joarn 60 met e klene rallysprint en een bitje met e kee is 'n egroeid toet wuk dat 'n nu is. 
 
-Sedert midden de joaren 't scheventig is da è toprally in 't Europeesch kampioenschap en 't ende de joaren 't neegentig èn ze geprobeerd om in 't Weireldkampioenschap te groaken. Daddis ton nie gelukt moar den dag van vandoage zyn ze doar were actif mee bezig en vande joare makten ze dêel ut van den [[IRC]]. Da is nen vôorloper van è nieuw sôorte weireldkampioenschap. De menschen die da organiseern zyn verênigd in è club [[A.C. Targa Florio]] en nunder clublokoal is in den [[Kolleblomme]] up de grôte maart in [[Yper]].  
+Sedert middn de joarn 70 is 't e toprally in 't Europees Kampioenschap en 't ende de joarn 90 en ze etracht voun in 't Weireldkampioenschap te groaken. Dadde en is toun nie elukt, moar 'n dag va vadoage zyn ze doa were actif mei bezig en in 2007 maktn ze deel uut va 'n [[IRC]], e voorloper van e nieuw soorte weireldkampioenschap. De menschn die dat organiseern, zyn verenigd in [[A.C. Targa Florio]], woavan da 't clublokoal in de Kolleblomme up de Grote Mart in [[Yper]] is.  
+
+==Winnoars==
+
+'t Zyn 4 pilootn die 'n rally 4 keirs ewonn en, ollemoale Belgn (Freddy Loix, Patrick Snijers, Robert Droogmans en Gilbert Stapelaere). Danny Colebunders, co-piloot van Snijers en Princen, et 5 keirs ewonn. 
+
+{| width=100%
+| valign=top align=left width=50% |
+*[[2008]] -
+*[[2007]] – {{IT-VLAG}} Rossetti/Chiarcossi
+*[[2006]] – {{IT-VLAG}} Basso/Dotta
+*[[2005]] – {{BE-VLAG}} Princen/Colebunders
+*[[2004]] – {{BE-VLAG}} Cols/Goddé
+*[[2003]] – {{BE-VLAG}} Thiry/Prévot
+*[[2002]] – {{BE-VLAG}} Thiry/Prévot
+*[[2001]] – {{BE-VLAG}} Tsjoen/Vergalle
+*[[2000]] – {{DK-VLAG}} Lundgaard/Anker
+*[[1999]] – {{BE-VLAG}} Loix/Smeets
+*[[1998]] – {{BE-VLAG}} Loix/Smeets
+*[[1997]] – {{BE-VLAG}} Loix/Smeets
+*[[1996]] – {{BE-VLAG}} Loix/Smeets
+*[[1995]] – {{BE-VLAG}} Verreydt/Jamar
+| valign=top align=left width=50% |
+*[[1994]] – {{BE-VLAG}} Snijers/Colebunders
+*[[1993]] – {{BE-VLAG}} Snijers/Colebunders
+*[[1992]] – {{BE-VLAG}} Snijers/Colebunders
+*[[1991]] – {{BE-VLAG}} Snijers/Colebunders
+*[[1990]] – {{BE-VLAG}} Droogmans/Joosten
+*[[1989]] – {{BE-VLAG}} Droogmans/Joosten
+*[[1988]] – {{BE-VLAG}} Droogmans/Joosten
+*[[1987]] – {{GB-VLAG}} McRae/Grindrod
+*[[1986]] – {{BE-VLAG}} Droogmans/Joosten
+*[[1985]] – {{FR-VLAG}} Ragnotti/Thimunier
+*[[1984]] – {{FI-VLAG}} Toivonen/Grindrod
+*[[1983]] – {{IT-VLAG}} Biasion/Siviero
+*[[1982]] – {{BE-VLAG}} Duez/Lux
+*[[1981]] – {{FR-VLAG}} Andruet/Emanuelli
+*[[1980]] – {{GB-VLAG}} Pond/Gallacher
+|}
 
 == Externe koppelienge ==
 * [http://www.ypresrally.com De site van de 24 Eurn van Yper]
