--- a/KVK_Ieper.mw
+++ b/KVK_Ieper.mw
@@ -36,3 +36,5 @@ Yper degradeert no twidde. 't Got nog twi keers gebeurn (in 1999-2000 en in 2003
 
 [[Categorie: West-Vlamsche voetbolclub|Ieper KVK]]
 [[Categorie: Yper|Ieper KVK]]
+
+[[nl:KVK Ieper]]
