--- a/Kapelle.mw
+++ b/Kapelle.mw
@@ -6,3 +6,7 @@
 * [[Kapelle (Vrankryk)]]: de [[Frans-Vloandern|Frans-Vlamsche]] gemeente ''Cappelle-la-Grande''
 
 {{db}}
+
+[[de:Kapelle]]
+[[fr:Cappel (homonymie)]]
+[[nl:Kapelle]]
