--- a/Karel_Declercq.mw
+++ b/Karel_Declercq.mw
@@ -8,3 +8,5 @@ Karel Declercq is oek bekend voe ze roare toern ant verkiezingn zyn. In 1999 sto
 * [http://www.kareldeclercq.com Zen officieeln website]
 
 [[Categorie:Kluchtigoard|Declercq, Karel]]
+
+[[nl:Karel Declercq]]
