--- a/Karel_I.mw
+++ b/Karel_I.mw
@@ -4,3 +4,20 @@
 *[[Karel I van Spanje]], by uus beter bekend lik '''[[Karel V van et Illig Roomsche Ryk|keizer Karel V]]''' (1516-1556)
  
 {{db}}
+
+[[ast:Carlos I]]
+[[ca:Carles I]]
+[[cs:Karel I. (rozcestník)]]
+[[en:Charles I]]
+[[eo:Karolo (regantoj)]]
+[[es:Carlos I (desambiguación)]]
+[[fi:Kaarle I]]
+[[hu:I. Károly]]
+[[it:Carlo I]]
+[[ja:シャルル1世]]
+[[nl:Karel I]]
+[[nn:Karl I]]
+[[pl:Karol I]]
+[[pt:D. Carlos I (desambiguação)]]
+[[sv:Karl I]]
+[[zh:查理一世]]
