--- a/Karel_II.mw
+++ b/Karel_II.mw
@@ -4,3 +4,16 @@
 *[[Karel II van Spanje]], keunienk van Spanje (1665-1700)
  
 {{db}}
+
+[[ca:Carles II]]
+[[cs:Karel II. (rozcestník)]]
+[[en:Charles II]]
+[[eo:Karolo la 2-a]]
+[[es:Carlos II]]
+[[it:Carlo II]]
+[[ja:シャルル2世]]
+[[nl:Karel II]]
+[[nn:Karl II]]
+[[pl:Karol II]]
+[[sv:Karl II]]
+[[zh:查理二世]]
