--- a/Karel_III.mw
+++ b/Karel_III.mw
@@ -5,3 +5,19 @@
 *[[Karel III van Spanje]], keunienk van Spanje (1759-1788)
  
 {{db}}
+
+[[ca:Carles III]]
+[[cs:Karel III. (rozcestník)]]
+[[en:Charles III]]
+[[eo:Karolo la 3-a]]
+[[es:Carlos III (desambiguación)]]
+[[gl:Carlos III]]
+[[hu:III. Károly (egyértelműsítő lap)]]
+[[it:Carlo III]]
+[[ja:カール3世]]
+[[nl:Karel III]]
+[[nn:Karl III]]
+[[pl:Karol III]]
+[[ru:Карл III]]
+[[sv:Karl III]]
+[[zh:查理三世]]
