--- a/Karel_IV.mw
+++ b/Karel_IV.mw
@@ -5,3 +5,19 @@
 *[[Karel IV van Spanje]], keunienk van Spanje (1788-1808)
  
 {{db}}
+
+[[ca:Carles IV]]
+[[cs:Karel IV. (rozcestník)]]
+[[en:Charles IV]]
+[[eo:Karolo la 4-a]]
+[[es:Carlos IV]]
+[[fi:Kaarle IV]]
+[[fr:Charles IV]]
+[[hu:IV. Károly (egyértelműsítő lap)]]
+[[it:Carlo IV]]
+[[nl:Karel IV]]
+[[nn:Karl IV]]
+[[pl:Karol IV]]
+[[sk:Karol IV.]]
+[[sv:Karl IV]]
+[[zh:查理四世]]
