--- a/Karel_V.mw
+++ b/Karel_V.mw
@@ -5,53 +5,23 @@
  
 {{db}}
 
-[[an:Carlos I d'Aragón]]
-[[ar:شارل الخامس]]
-[[ast:Carlos I d'España y V d'Alemaña]]
-[[bg:Карл V]]
-[[br:Karl V, impalaer Aostria]]
-[[ca:Carles V del Sacre Imperi Romanogermànic]]
-[[cs:Karel V.]]
-[[da:Karl 5. (Tysk-romerske rige)]]
-[[de:Karl V. (HRR)]]
-[[el:Κάρολος Κουίντος]]
-[[en:Charles V, Holy Roman Emperor]]
-[[eo:Karlo la 5-a (Sankta Romia Imperio)]]
-[[es:Carlos I de España]]
-[[et:Karl V]]
-[[eu:Karlos I.a Espainiakoa]]
-[[fi:Kaarle V (keisari)]]
-[[fr:Charles Quint]]
-[[gl:Carlos I de España]]
-[[he:קרל החמישי, קיסר האימפריה הרומית הקדושה]]
-[[hr:Karlo V., car Svetog Rimskog Carstva]]
-[[hu:V. Károly német-római császár]]
-[[id:Karl V, Kaisar Romawi Suci]]
-[[it:Carlo V del Sacro Romano Impero]]
-[[ja:カール5世 (神聖ローマ皇帝)]]
-[[ka:კარლ V ჰაბსბურგი]]
-[[ko:신성 로마 제국의 카를 5세]]
-[[ksh:Karl V. (HRR)]]
-[[la:Carolus V (imperator)]]
-[[lb:Karel V. (HRR)]]
-[[lt:Imperatorius Karolis V]]
-[[lv:Kārlis V (Svētā Romas impērija)]]
-[[mr:चार्ल्स पाचवा, पवित्र रोमन सम्राट]]
-[[ms:Charles V, Maharaja Rom Holy]]
-[[nl:Karel V van het Heilige Roomse Rijk]]
-[[nn:Karl V av Det tysk-romerske riket]]
-[[no:Karl V av Det tysk-romerske rike]]
-[[pl:Karol V Habsburg]]
-[[pt:Carlos I de Espanha]]
-[[ro:Carol Quintul]]
-[[ru:Карл V Габсбург]]
-[[scn:Carlu V, Sacru Rumanu Mpiraturi]]
-[[simple:Charles V, Holy Roman Emperor]]
-[[sl:Karel V. Habsburški]]
-[[sr:Карло V, цар Светог римског царства]]
-[[sv:Karl V (tysk-romersk kejsare)]]
-[[th:สมเด็จพระจักรพรรดิชาลส์ที่ 5 แห่งจักรวรรดิโรมันอันศักดิ์สิทธิ์]]
-[[tr:V. Karl]]
-[[uk:Карл V Габсбурґ]]
-[[wa:Tchårlukin]]
-[[zh:查理五世 (神圣罗马帝国)]]
+[[ca:Carles V]]
+[[cs:Karel V. (rozcestník)]]
+[[de:Liste der Herrscher namens Karl#Karl_IV._bis_Karl_V.]]
+[[en:Charles V]]
+[[eo:Karolo la 5-a]]
+[[es:Carlos V]]
+[[fi:Kaarle V]]
+[[fr:Charles V]]
+[[hr:Karlo V.]]
+[[hu:V. Károly]]
+[[it:Carlo V]]
+[[ja:カール5世]]
+[[nl:Karel V]]
+[[nn:Karl V]]
+[[no:Karl V]]
+[[pl:Karol V]]
+[[pt:Carlos V]]
+[[scn:Carlu V]]
+[[sv:Karl V]]
+[[zh:查理五世]]
