--- a/Karel_ende_Elegast.mw
+++ b/Karel_ende_Elegast.mw
@@ -35,3 +35,7 @@ Vraye historie ende al waer
 Maghic u tellen. Hoerter naer!
 Het was op ene avontstonde,
 Dat Karel slapen begonde
+
+[[en:Elegast]]
+[[fr:Elegast]]
+[[nl:Karel ende Elegast]]
