--- a/Karel_van_Wijnendaele.mw
+++ b/Karel_van_Wijnendaele.mw
@@ -9,3 +9,5 @@ In [[1913]] organisêrdet ie den èèste Rounde van Vloandrn.  De koers moest va
 Karel Van Wijnendaele stierft ost ie 79 joar oed was in december 1961. In de zomer van da joar aat ie nog de [[Rounde van Frankryk]] meegevolgd. 
 
 [[Categorie: West-Vlamsche journalist|V]]
+
+[[nl:Karel Van Wijnendaele]]
