--- a/Kasteelbier.mw
+++ b/Kasteelbier.mw
@@ -19,3 +19,6 @@ Der zyn twêe variëteiten: den breunen (''bruin'') en den blounden (''blond'').
 *[http://www.vanhonsebrouck.be Website van de brouwery]
 
 [[Categorie:Bier]]
+
+[[fr:Kasteel Bier]]
+[[nl:Kasteelbier]]
