*Empty MediaWiki Message*

--- a/Frank_Vandenbroucke_(coureur).mw
+++ b/Frank_Vandenbroucke_(coureur).mw
@@ -1,12 +1,13 @@
 {{wrapper}}
 |[[Ofbeeldienge:Frankyboy.JPG|thumb|right|VDB op 't Dernycriterium in [[Antwerpn]] (08/08/2007) ]]
 |}
-
 '''Frank Vandenbroucke''' ([[Moeskroen]], [[6 november]] [[1974]]) is e [[België|Belgschen]] [[coureur]].
 
 Vandenbroucke, ouk wel 'VDB' genoemd, groeide op in [[Ploegsteirt]]. E beguste êerst mi [[atletiek|atletik]]. Op zijn 15 begost 'n mi koersen en op zyn 16 wost 'n ol kampioen by de nieuweliengn. E wos zo goed dat 'n ier en doar e joar van zyn reekse oversloeg.
 
-In 1994 kwam Vandenbroucke prof by Lotto. Olleman zei da VDB de grotste belofte van Belgie wos. Toet 1999 (zyn absoluut topjoar) at 'n 't êne succes achter 't ander, mo in dazeste joar wost 'n verdacht van dopinggebruuk. Sedertien ging 't bergof mi VDB; e kwam zelfs depressief.
+In 1994 kwam Vandenbroucke prof by Lotto, woa da zyn nounkel Jean-Luc sportdirecteur wos. E têeknde e contract van 2 joar, moar en et dat ni uutedoan. D'r kwam e proces van, moar uutendelik koste Vandenbroucke toch vroeger overstappn na Mapei-GB. E ploeg woa da 'n de medische en professionele begeleiding krêeg da 'n zo geirn wilde. Olleman zei da VDB de grotste belofte van Belgie wos. 
+
+Toet 1999 (zyn absoluut topjoar) at 'n 't êne succes achter 't ander, mo in dazeste joar wost 'n verdacht van dopinggebruuk. Sedertien ging 't bergof mi VDB; e kwam zelfs depressief. E krêeg nog e sportivve eroplevieng in 2002 (twiddn in de Rounde van Vloandern), moa doarachter kwamn d'r ni vele topprestoasjes ne mi.
 
 Op 7 juni 2007 rochte bekend da Vandenbroucke, de dag dervôorn, e zelfmôordpogieng oundernoomn adde. Doarachter begoste VDB an ze zoveelsn comeback. Anno 2008 rydt 'n nog ossan, moa e stapt mêer of, of dat 'n koersn uutrydt. In 2008 rêed 'n tout 17 april 2008 vo Mitsubishi-Jartazi, moar op dien dag makte de ploeg bekend da ze (vôorlopig) uut makoar giengn. 
 
@@ -17,7 +18,7 @@ Op 7 juni 2007 rochte bekend da Vandenbroucke, de dag dervôorn, e zelfmôordpog
 ===1995===
 * Parys-Brussel
 * Grote Prijs Cholet-Pays-de-Loire
-* 1ste etappe van de Roende va Luxemburh
+* 1ste etappe van de Roende va Luxemburg
 * Oostakker
 * Wielsbeke
 * Zomergem-Adinkerke
@@ -79,10 +80,14 @@ gin overwinniengn
 * 2006 Unibet.com  
 * 2006-2007 Aqua a Sapone
 * 2008 Mitsubishi-Jartazi
+
+== Boekn ==
+''Ik ben god niet'' (2008), ottobiografie, Borgerhoff & Lamberigts, ISBN: 978-9077941300
+
 ==Externe koppelienge==
 * [http://www.frankvdbroucke.be Zyn website]
 
-[[Categorie:West-Vlamsche coureur|Vandenbroucke, Frank]]
+[[Categorie:coureur|Vandenbroucke, Frank]]
 
 [[de:Frank Vandenbroucke]]
 [[en:Frank Vandenbroucke (cyclist)]]
