--- a/Rôonberg.mw
+++ b/Rôonberg.mw
@@ -1,3 +1,15 @@
+{{beg}}
+{{Euvel
+|ofbeeldienge=
+|noame = Rôonberg
+|top = 129
+|locoatie = [[Euvelland]]
+|startplekke = [[Westouter]] / [[Loker]]
+|Ôogteverschil = 88 / 81
+|lengte = 2.000 / 1.700
+|stygiengspercentoage = 4,4 / 4,8
+|steilstekilomeiter = 16 / 13
+}}
 De '''Rôonberg''', (Nederlands: ''Rodeberg'') is e [[getuugneuvel]] in [[Westouter]], in 't [[Euvelland]]. En is 129 meter oge, en e besloat om en by de 25 ectoarn. Lasen de Rôonberg legt de [[Zwortnberg]] (Nederlands: ''Zwarteberg'', Frans: Mont Noir). 
 
 == Attrasksjes ==
