*Empty MediaWiki Message*

--- a/Rôonberg.mw
+++ b/Rôonberg.mw
@@ -1,7 +1,7 @@
 {{beg}}
 {{Euvel
 |ofbeeldienge=
-|noame = Rôonberg
+|noame = Rôonberg (West / Ôost)
 |top = 129
 |locoatie = [[Euvelland]]
 |startplekke = [[Westouter]] / [[Loker]]
