--- a/Rôonberg.mw
+++ b/Rôonberg.mw
@@ -9,7 +9,7 @@
 |stygiengspercentoage = 4,4 / 4,8
 |steilstekilomeiter = 16 / 13
 }}
-[[Image:Heuvelland - Rodeberg 1.jpg|thumb|right|Rodeberg]]
+[[Image:Heuvelland - Rodeberg 1.jpg|thumb|right|Rôonberg]]
 De '''Rôonberg''', (Nederlands: ''Rodeberg'') is e [[getuugneuvel]] in [[Westouter]], in 't [[Euvelland]]. En is 129 meter oge, en e besloat om en by de 25 ectoarn. Lasen de Rôonberg legt de [[Zwortnberg]] (Nederlands: ''Zwarteberg'', Frans: Mont Noir). 
 
 == Attrasksjes ==
