--- a/Rôonberg.mw
+++ b/Rôonberg.mw
@@ -10,13 +10,13 @@
 |steilstekilomeiter = 16 / 13
 }}
 [[Image:Heuvelland - Rodeberg 1.jpg|thumb|right|Rôonberg]]
-De '''Rôonberg''', (Nederlands: ''Rodeberg'') is e [[getuugneuvel]] in [[Westouter]], in 't [[Euvelland]]. En is 129 meter oge, en e besloat om en by de 25 ectoarn. Lasen de Rôonberg legt de [[Zwortnberg]] (Nederlands: ''Zwarteberg'', Frans: Mont Noir). 
+De '''Rôonberg''', (Nederlands: ''Rodeberg'') is e [[getuugneuvel]] in [[Westouter]], in 't [[Euvelland]]. En is 129 meter oge, en e besloat om en by de 25 ectoarn. Lasen de Rôonberg legt 'n [[Zwortnberg]]. 
 
-== Attrasksjes ==
-* De Rôonberg is een ideaal pleksje voe mountainbikers e wandeloars. Op de nôordkant ejje 't Ellegat (Nederlands: Hellegat), e sôorte va bebusjte ravyne. Doa ountspringt d'Ellegatbeke. 
-* Wulfhille, e heemkundig museum da werktuug verzoamelt van oude ambachtn.
-* Vroeger wos 't er op de Rôonberg e zwembad: de Kosmos. Da wos bekend in hêel 't streke, moa de Kosmos is nu ol e poar joar toe en an 't verloedern. Recentelik (juli 2006) klappn ze van e restauroasje van 't complex.
-* De [[velokoerse|koers]] passirt ier ieder joare. De [[Vierdoagsche van Duunkerke]], en nog e poare.
+== Attraksjes ==
+* De Rôonberg is een ideaal pleksje voe mountainbikers e wandeloars. Op de nôordkant e je 't Ellegat, e sôorte va bebuschte ravyne. Doa ountspringt d'Ellegatbeke. 
+* Wulfhille, een eemkundig museum da werktuug verzoamelt van oude ambachtn.
+* Vroeger wos 't er op 'n Rôonberg e zwembad: de Kosmos. Da wos bekend in hêel 't streke, moa de Kosmos is nu ol e poar joar toe en an 't verloedern. Ze klappn ol e poar joar van e restauroasje van 't complex, moa 't komt er ni van.
+* De [[velokoerse|koers]] passirt ier ieder joare: de [[Vierdoagsche van Duunkerke]], en nog e poare.
 
 [[Categorie:Geografie van België]]
 [[Categorie:Euvelland]]
