etjoept van 'n NL wiki, 'k geevn 't toe

--- a/Rôonberg.mw
+++ b/Rôonberg.mw
@@ -16,7 +16,10 @@ De '''Rôonberg''', (Nederlands: ''Rodeberg'') is e [[getuugneuvel]] in [[Westou
 * De Rôonberg is een ideaal pleksje voe mountainbikers e wandeloars. Op de nôordkant e je 't Ellegat, e sôorte va bebuschte ravyne. Doa ountspringt d'Ellegatbeke. 
 * Wulfhille, een eemkundig museum da werktuug verzoamelt van oude ambachtn.
 * Vroeger wos 't er op 'n Rôonberg e zwembad: de Kosmos. Da wos bekend in hêel 't streke, moa de Kosmos is nu ol e poar joar toe en an 't verloedern. Ze klappn ol e poar joar van e restauroasje van 't complex, moa 't komt er ni van.
-* De [[velokoerse|koers]] passirt ier ieder joare: de [[Vierdoagsche van Duunkerke]], en nog e poare.
+
+== Koers ==
+De [[velokoerse|koers]] passirt dikkers over 'n Rôonberg: de [[Vierdoagsche van Duunkerke]], [[Driedoagsche van De Panne]], de Driedoagsche van West-Vloandern, [[Gent-Wevelgem]],... Nu e ki pakkn ze 'n berg van ol 'n ôostkant, ton were van de westkant. De latste joarn is 't e stik van Roônberg-West, achter 'n klem van 'n [[Vidaigneberg]], en doarachter is 't bergof ol 'n ôostkant van 'n Rôonberg.  
+'n Rôonberg lag ouk op 't parcourn van 't Weireldkampioenschap van 1950 in [[Môorslee]].  
 
 [[Categorie:Geografie van België]]
 [[Categorie:Euvelland]]
