--- a/Katsberg.mw
+++ b/Katsberg.mw
@@ -12,3 +12,7 @@ De [[Rounde van Vrankryk]] is êne kè epasseerd. Mountainbikers kunn nunder doa
 [http://www.abbaye-montdescats.com/ Website van d'abdy (in 't Frans)]
 
 [[Categorie:Geografie van Vrankryk]]
+
+[[fr:Mont des Cats]]
+[[en:Mont des Cats]]
+[[nl:Katsberg]]
