*Empty MediaWiki Message*

--- a/Katsberg.mw
+++ b/Katsberg.mw
@@ -1,15 +1,25 @@
+{{Euvel
+|ofbeeldienge=
+|noame = Katsberg
+|top = 150
+|locoatie = [[Franschn Westoek]]
+|startplekke = [[Boeschepe]]
+|Ôogteverschil = 45
+|lengte = 500
+|stygiengspercentoage = 9,0
+|steilstekilomeiter = 14
+}}
 'n '''Katsberg''' (Frans: Mont des Cats) is e getugeneuvel in [[Frans-Vloandern]]. ’n Berg legt op ’t gebied va de gemêente [[Godsvelde]]. En is 150 meters oge. 't Zwoarste stik van 'n Katsberg is 14 %; gemiddeld lop et 9% omoge.
 
 Op ’n top van ’n berg legt er een abdy. De poaters-trappistn moakn e koas die ''Mont des Cats'' noemt. De abdy zelve kuj nie bezoekn.
 
 Wielerliefebbers kunn 'n Katsberg kenn va 'n [[vélokoerse|koers]]: [[Gent-Wevelgem]] is ier ol e poar keirs epasseerd: i 1957, i 1993 (2 keirs), in 1994 (2 keirs) e 1995 (2 keirs). 
-De [[Rounde van Vrankryk]] is êne kè epasseerd. Mountainbikers kunn nunder doar oek jeunn, want 't zyn doar e masse eirdeweugeltjes ouk. Oundermêer de toertochtn van [[Kemmel]], [[Dikkebus]] en [[Rinnegelst]] passeern derover.
+De [[Rounde van Vrankryk]] is êne kè epasseerd. Mountainbikers kunn nunder doar ouk jeunn, want 't zyn doar e masse eirdeweugeltjes. Oundermêer de toertochtn van [[Kemmel]], [[Dikkebus]] en [[Rinnegelst]] passeern derover.
 
-'n Berg is oek va belang voer een andern reedn: 't stoan radio- e televiezjezenders op.
-
+'n Berg is ouk va belang voer een andern reedn: 't stoan radio- e televiezjezenders op.
 
 == Externe koppelienge ==
-[http://www.abbaye-montdescats.com/ Website van d'abdy (in 't Frans)]
+*[http://www.abbaye-montdescats.com/ Website van d'abdy (FR)]
 
 [[Categorie:Geografie van Vrankryk]]
 
