+ foto Wiki Commons

--- a/Katsberg.mw
+++ b/Katsberg.mw
@@ -9,6 +9,7 @@
 |stygiengspercentoage = 9,0
 |steilstekilomeiter = 14
 }}
+[[Ofbeeldieng:Mont des Cats ( vu de Steenvoorde).jpg|thumb|right|' n Katsberg, ezien vanuut [[Stêenvôorde]]]]
 'n '''Katsberg''' (Frans: Mont des Cats) is e getugeneuvel in [[Frans-Vloandern]]. ’n Berg legt op ’t gebied va de gemêente [[Godsvelde]]. En is 150 meters oge. 't Zwoarste stik van 'n Katsberg is 14 %; gemiddeld lop et 9% omoge.
 
 Op ’n top van ’n berg legt er een abdy. De poaters-trappistn moakn e koas die ''Mont des Cats'' noemt. De abdy zelve kuj nie bezoekn.
