--- a/Klaas_Vantornout.mw
+++ b/Klaas_Vantornout.mw
@@ -19,3 +19,7 @@ Klaas Vantornout es begunn koersn ip zyn 13de. Ie probeerde zowel ip de weg als 
 
 [[Categorie:West-Vlamsche coureur]]
 [[Categorie:Toeroet]]
+
+[[de:Klaas Vantornout]]
+[[eu:Klaas Vantornout]]
+[[nl:Klaas Vantornout]]
