--- a/Kneistival.mw
+++ b/Kneistival.mw
@@ -42,3 +42,5 @@ Zaterdag 28 juli 2007 : De Fixkes, ’t Hof van Commerce
 
 [[Categorie: Knokke-Heist]]
 [[Categorie: West-Vlamsch muziekfestival]]
+
+[[nl:Kneistival]]
