--- a/Krant_van_West-Vlaanderen.mw
+++ b/Krant_van_West-Vlaanderen.mw
@@ -17,3 +17,5 @@ De Weekbode et ton nog aparte regionale versies: editie Roeselare, editie Izegem
 *[http://www.kw.be Officieeln website]
 
 [[Categorie:West-Vlamsche gazette]]
+
+[[nl:Krant van West-Vlaanderen]]
