--- a/Krombeke.mw
+++ b/Krombeke.mw
@@ -26,3 +26,5 @@ In 875 stoat er voe 'n êeste kei etwot over Krombeke in de boekn en wel ounder 
 
 [[Categorie:Plekke in West-Vloandern]]
 [[Categorie: Poperienge]]
+
+[[nl:Krombeke]]
