--- a/Frank_Vandenbroucke_(coureur).mw
+++ b/Frank_Vandenbroucke_(coureur).mw
@@ -11,61 +11,39 @@ Toet 1999 (zyn absoluut topjoar) at 'n 't êne succes achter 't ander, mo in daz
 
 Op 7 juni 2007 rochte bekend da Vandenbroucke, de dag dervôorn, e zelfmôordpogieng oundernoomn adde. Doarachter begoste VDB an ze zoveelsn comeback. Anno 2008 rydt 'n nog ossan, moa e stapt mêer of, of dat 'n koersn uutrydt. In 2008 rêed 'n tout 17 april 2008 vo Mitsubishi-Jartazi, moar op dien dag makte de ploeg bekend da ze (vôorlopig) uut makoar giengn. 
 
-==Palmares==
-'''1994'''
-* 6de etappe van de Rounde van de Middellansche Zêe
-* Bellegem
-'''1995'''
+==Grotste overwinniengn==
+'''1994''' (2 overwinniengn)
+* 6e etappe van de Rounde van de Middellansche Zêe
+'''1995''' (7 overwinniengn)
 * Parys-Brussel
-* Grote Prijs Cholet-Pays-de-Loire
-* 1ste etappe van de Roende va Luxemburg
-* Oostakker
-* Wielsbeke
-* Zomergem-Adinkerke
-* La Louvière
-'''1996'''
+* 1ste etappe van de Rounde va Luxemburg
+'''1996''' (15 overwinniengn)
 * 5de etappe van de Rounde van de Middellansche Zêe
 * proloog, 3e, 6e en 8e etappe van de Rounde van Ôostenryk
-* Trofeo Laiguelia
-* Grote Prys van Plouay
+* Trofeo Laigueglia
+* Grôte Prys van Plouay
 * [[Scheldeprys]]
-* Binche-Doornik-Binche
 * proloog, 2de en 5de etappe van de Rounde van het Woalsche Gewest
-* [[Wiengne]]
-'''1997'''
+'''1997''' (8 overwinniengn)
 * 3de etappe van de Rounde van Luxemburg
-* Rounde van Keuln
 * Trofeo Matteotti
 * 2de, 4de en 8ste etappe van de Rounde van Ôostnryk
-* Oalst
-'''1998'''
+'''1998''' (13 overwinniengn)
 * [[Gent-Wevelgem]]
 * 1ste en 5de etappe en eindklassement Parys-Nice
 * 3de en 6de etappe van de Rounde van het Woalsche Gewest
-* 4de etappe van de Rounde van Galicië
-* GP Villafranca de Ordizia
-* Amiens
-'''1999'''
-* Puntnklassement in de Rounde van Spanje
+'''1999''' (8 overwinniengn)
+* 3de etappe-b in de [[Driedoagsche van De Panne]]
 * 16e en 19e etappe van de Rounde van Spanje
+* Puntnklassement in de Rounde van Spanje
 * [[Luuk-Bastenoakn-Luuk]]
-* Omloop 't Volk
+* [[Omloop Het Volk]]
 * GP La Marseillaise
 * 4de etappe van de Ruta del Sol
 * 7de etappe van Paris-Nice
 * 3de etappe van de [[Driedoagse van De Panne]]
 '''2000'''
 * ploegntydrit in de Ster van Bessèges
-'''2001'''
-gin overwinniengn
-'''2002'''
-*Erpe-Mere
-'''2003'''
-*Kortryk
-'''2004'''
-* GP Zwevegem
-'''2005'''
-* GP Zwevegem
 
 ==Ploegn==
 * 1994 Lotto-Caloi
