--- a/Kunstschilder.mw
+++ b/Kunstschilder.mw
@@ -16,3 +16,5 @@ Schilders teekn ook dikkers, als voorbereidienge voe 't schildery, of in 't schi
 [[Categorie:schilderkunste| ]]
 [[Categorie:kunstschilder| ]]
 [[Categorie:kunstnoare| ]]
+
+[[nl:Kunstschilder]]
