--- a/Lange_Wapper.mw
+++ b/Lange_Wapper.mw
@@ -15,3 +15,6 @@ Lange Wapper wos gin froaioard. Nu en ton verandernde ze zelvn in e klêen kiend
 
 [[Categorie: Antwerpn]]
 [[Categorie: Sage]]
+
+[[en:Lange Wapper]]
+[[nl:Lange Wapper (reus)]]
