--- a/Lapscheure.mw
+++ b/Lapscheure.mw
@@ -24,3 +24,7 @@ D'oudste vermeldienge van Lapscheure is van ’t joar 1019: Lappesscura. De noam
 *De “Blauwe Sluis” uut 1746, geleegn ounder de Zêedyk an ‘t Lapscheurse Gat. Tusschn 1746 en 1843 regelde de “Blauwe Sluis” de ofwoaterienge van de polders round ‘t Lapscheurse Gat. In 1830 mocht ’t Belgisch woater nie me over ’t Ollands groundgebied en doavôren wierd in 1847 ’t Leopoldkanoal gegroaven die nu dient vo d'ofwoaterienge langs [[Heist]] noa de zêe. De Blauwe Sluis wordt dus nie me gebruukt  moar is ip 30 juli 1976 als monument erkend en gerestaureerd.
 [[Categorie:Damme]]
 [[Categorie:Plekke in West-Vloandern]]
+
+[[en:Lapscheure]]
+[[nl:Lapscheure]]
+[[pt:Lapscheure]]
