--- a/Libourne.mw
+++ b/Libourne.mw
@@ -15,3 +15,25 @@ Image:Libourne4.jpg|<center>Gevels ip de Place Abel Surchamp
 *[http://www.festarts.com 't Stroattheoaterfestivoal van Libourne]
 
 [[Categorie: Stad in Vrankryk]]
+
+[[ca:Liborna]]
+[[ceb:Libourne]]
+[[de:Libourne]]
+[[en:Libourne]]
+[[es:Libourne]]
+[[fr:Libourne]]
+[[it:Libourne]]
+[[ja:リブルヌ]]
+[[nl:Libourne]]
+[[nn:Libourne]]
+[[oc:Liborna]]
+[[pam:Libourne]]
+[[pl:Libourne]]
+[[pt:Libourne]]
+[[ro:Libourne]]
+[[ru:Либурн]]
+[[simple:Libourne]]
+[[sl:Libourne]]
+[[sv:Libourne]]
+[[vi:Libourne]]
+[[vo:Libourne]]
