--- a/Lille.mw
+++ b/Lille.mw
@@ -4,3 +4,12 @@
 *de Fransche noame vo [[Rysel]], e stad in 't nôordn va [[Vrankryk]]
 
 {{db}}
+
+[[de:Lille (Begriffsklärung)]]
+[[en:Lille (disambiguation)]]
+[[fr:Lille (homonymie)]]
+[[nl:Lille]]
+[[no:Lille (andre betydninger)]]
+[[pl:Lille (ujednoznacznienie)]]
+[[tr:Lille (anlam ayrım)]]
+[[vo:Lille]]
