--- a/Loker.mw
+++ b/Loker.mw
@@ -22,3 +22,6 @@ Specioal is de kerke met vier tôorntjes en dus gin grôte torre. In de Godschal
 
 [[Categorie: Euvelland]]
 [[Categorie: Plekke in West-Vloandern]]
+
+[[en:Loker]]
+[[nl:Loker]]
