--- a/Louis_Bril.mw
+++ b/Louis_Bril.mw
@@ -17,3 +17,6 @@ Louis Bril leidde soamen me Fernand Bril het carroserybedryf '''Bril'' uut Roese
 
 [[Categorie:West-Vlamsche polletieker|Bril, Louis]]
 [[Categorie: Roeseloare|Bril, Louis]]
+
+[[fr:Louis Bril]]
+[[nl:Louis Bril]]
