--- a/Louis_Paul_Boon.mw
+++ b/Louis_Paul_Boon.mw
@@ -1,1 +1,8 @@
 {{beg}}'''Louis Paul Boon''' ([[Oalst]], [[15 moarte]] [[1912]] - Erembodegem, 10 mei [[1979]]) wos e [[Vloandern|Vlamschn]] [[schryver]].
+
+[[de:Louis Paul Boon]]
+[[en:Louis Paul Boon]]
+[[eo:Louis Paul Boon]]
+[[nl:Louis Paul Boon]]
+[[ro:Louis Paul Boon]]
+[[ru:Боон, Луи-Поль]]
