--- a/Luc_Martens.mw
+++ b/Luc_Martens.mw
@@ -18,3 +18,5 @@ Luc Martens is van ôorsproung lêroare [[Nederlands]]. En et oundermêer lesse 
 
 [[Categorie: West-Vlamsche polletieker|Martens Luc]]
 [[Categorie: Roeseloare|Martens Luc]]
+
+[[nl:Luc Martens]]
