--- a/Luk_Alloo.mw
+++ b/Luk_Alloo.mw
@@ -17,3 +17,5 @@
 *Luk Alloo eit lange tyd een reloatie g'ed mè [[Sandy Blanckaert]], de dochter van [[Will Tura]].
 
 [[Categorie: TV-presentator|Alloo Luk]]
+
+[[nl:Luk Alloo]]
