--- a/Lutgart_Simoens.mw
+++ b/Lutgart_Simoens.mw
@@ -18,3 +18,5 @@ Neur ouders kwaamn uut de Kempn en [[Ôost-Vloandern]]. Ze moestn Algemêen Nede
 
 
 [[Categorie:West-Vlamsche radio-presentator]]
+
+[[nl:Lutgart Simoens]]
