--- a/Luuk-Bastenoakn-Luuk.mw
+++ b/Luuk-Bastenoakn-Luuk.mw
@@ -21,3 +21,20 @@ Tot nu toe zyn d'er moa 6 coureurs die diejn dubbel verwezenlikt en in 't zelfst
 [[Eddy Merckx]] is recordouder: en et L-B-L 5 keirs kunn winn.  	 
 
 [[Categorie: Belgische wielerkoers]]
+
+[[ca:Lieja-Bastogne-Lieja]]
+[[da:Liège-Bastogne-Liège]]
+[[de:Lüttich–Bastogne–Lüttich]]
+[[en:Liège-Bastogne-Liège]]
+[[es:Lieja-Bastogne-Lieja]]
+[[fi:Liège–Bastogne–Liège]]
+[[fr:Liège-Bastogne-Liège]]
+[[gl:Liège-Bastogne-Liège]]
+[[he:ליאז' - בסטון - ליאז']]
+[[it:Liegi-Bastogne-Liegi]]
+[[ja:リエージュ〜バストーニュ〜リエージュ]]
+[[lb:Liège - Bastogne - Liège]]
+[[nl:Luik-Bastenaken-Luik]]
+[[no:Liège-Bastogne-Liège]]
+[[pl:Liège-Bastogne-Liège]]
+[[sv:Liège-Bastogne-Liège]]
