--- a/Luuk_Gruwez.mw
+++ b/Luuk_Gruwez.mw
@@ -23,3 +23,6 @@ Ze werk is gerekend toet de neoromantiek, omdat 'n schryft over de grôte gevoel
 ::''Allemansgek'', mèd e CD (2005), poëzie
 
 [[Categorie:Vlamsche dichter|Gruwez, Luuk]]
+
+[[en:Luuk Gruwez]]
+[[nl:Luuk Gruwez]]
