--- a/Machteld_Ramoudt.mw
+++ b/Machteld_Ramoudt.mw
@@ -16,3 +16,5 @@ Machteld Ramoudt es in de [[gemêenteroadsverkiezingn 2006]] ipgekoomn voo [[Gro
 
 [[Categorie:West-Vlamschen acteur|Ramoudt Machteld]]
 [[Categorie:Roeseloare|Ramoudt Machteld]]
+
+[[nl:Machteld Ramoudt]]
