--- a/Marc_Van_Eeghem.mw
+++ b/Marc_Van_Eeghem.mw
@@ -23,3 +23,5 @@ Marc Van Eeghem es den broere van [[Kurt Van Eeghem]].
 
 [[Categorie:Brugge|Van Eeghem, Marc]]
 [[Categorie:West-Vlamschen acteur|Van Eeghem, Marc]]
+
+[[nl:Marc Van Eeghem]]
