--- a/Marc_Vervenne.mw
+++ b/Marc_Vervenne.mw
@@ -28,3 +28,7 @@ J'es getrouwd met Christine De Roo en j'èt drie kinders, Hannes, Hilke en Basti
 [[Categorie: Weetnschap]]
 [[Categorie: Onderwys]]
 [[Categorie: Yper]]
+
+[[de:Marc Vervenne]]
+[[en:Marc Vervenne]]
+[[nl:Marc Vervenne]]
