--- a/Marcel_Kint.mw
+++ b/Marcel_Kint.mw
@@ -33,3 +33,10 @@ Ze bynoame wos 'n ''Zwortn Oarnd'' (omdat'n zo zêre wos, up de boane en up de p
 
 [[Category:West-Vlamsche coureur|Kint, Marcel]]
 [[Category:Zwevegem|Kint, Marcel]]
+
+[[ca:Marcel Kint]]
+[[de:Marcel Kint]]
+[[en:Marcel Kint]]
+[[fi:Marcel Kint]]
+[[fr:Marcel Kint]]
+[[nl:Marcel Kint]]
