--- a/Marihuana.mw
+++ b/Marihuana.mw
@@ -24,3 +24,31 @@ A j' de noame Mary-Jane in een liedje ôort, willn ze doa eignlik mee zeggn weed
 
 [[Categorie:Geneeskunde]]
 [[Categorie:Drug]]
+
+[[bg:Марихуана]]
+[[cs:Marihuana]]
+[[de:Marihuana]]
+[[en:Cannabis (drug)]]
+[[eo:Mariĥuano]]
+[[es:Cannabis (droga)]]
+[[fi:Kannabis]]
+[[gl:Cannabis (droga)]]
+[[he:מריחואנה]]
+[[id:Ganja]]
+[[it:Marijuana]]
+[[ja:大麻]]
+[[jbo:marna snexu'i]]
+[[ko:대마초]]
+[[lt:Marihuana]]
+[[mk:Марихуана]]
+[[ml:കഞ്ചാവ്]]
+[[ms:Ganja]]
+[[nl:Marihuana]]
+[[no:Cannabis (rusmiddel)]]
+[[pl:Marihuana]]
+[[ru:Марихуана]]
+[[sk:Marihuana]]
+[[sl:Marihuana]]
+[[sv:Cannabis]]
+[[tt:Kinder]]
+[[uk:Марихуана]]
