--- a/Moederbord.mw
+++ b/Moederbord.mw
@@ -10,3 +10,55 @@ Tegenwoordig bestoan der ol verschillige types van moederbordn. De mêest couran
 Ip een moederbord zittn der ol verschillige slootn. Ten êeste é je de [[socket]] vo de [[processor]], mêestol een twuk met oftwel (by intel lga socket) met ol pinnekes, ofwel met ol puttekes. Ôok é je nog [[Dimm]] of variantn vo et [[werkgeheugn]], vodder van de reste é je nog [[AGP]], de oude standaard vo [[groafische koarte|groafische koartn]], of [[PCI-express]] vo nieuwere groafische koartn. Nefenst PCI-express é je ôok geweune [[PCI]]-slootn, die vo van olle soôrtn koartn gebruukt kunn wordn, pakt nu een [[geluudskoarte]].
 
 [[Categorie:Informatica]]
+
+[[ar:لوحة أم]]
+[[bg:Дънна платка]]
+[[br:Pennwal]]
+[[bs:Matična ploča]]
+[[ca:Placa mare]]
+[[cs:Základní deska]]
+[[da:Bundkort]]
+[[de:Hauptplatine]]
+[[el:Μητρική κάρτα]]
+[[en:Motherboard]]
+[[eo:Ĉeftabulo]]
+[[es:Placa base]]
+[[et:Emaplaat]]
+[[eu:Txartel nagusi]]
+[[fa:برد مادر]]
+[[fi:Emolevy]]
+[[fr:Carte mère]]
+[[fur:Schede mari]]
+[[gl:Placa base]]
+[[he:לוח אם]]
+[[hr:Matična ploča]]
+[[hu:Alaplap]]
+[[id:Papan induk]]
+[[is:Móðurborð]]
+[[it:Scheda madre]]
+[[ja:マザーボード]]
+[[ka:დედაპლატა]]
+[[ko:주기판]]
+[[lt:Pagrindinė plokštė]]
+[[lv:Mātes plate]]
+[[ml:മദര്‍ബോഡ്]]
+[[ms:Papan induk]]
+[[nn:Hovudkort]]
+[[no:Hovedkort]]
+[[nl:Moederbord]]
+[[pl:Płyta główna]]
+[[pt:Placa-mãe]]
+[[ru:Материнская плата]]
+[[sh:Matična ploča]]
+[[simple:Motherboard]]
+[[sk:Matičná doska]]
+[[sl:Matična plošča]]
+[[sq:Karta e zërit]]
+[[sr:Матична плоча]]
+[[sv:Moderkort]]
+[[th:เมนบอร์ด]]
+[[tr:Ana kart]]
+[[uk:Материнська плата]]
+[[vi:Bo mạch chủ]]
+[[yi:מוטער פלאטע]]
+[[zh:主板]]
