--- a/Morris.mw
+++ b/Morris.mw
@@ -5,3 +5,19 @@ De bekendstn strip van Morris wos '[[Lucky Luke]]'. 't Êerste dêel kwam uut in
 Morris et e pak prestigieuze pryzn ewonn (ounder andere de Grand Prix Spécial van 't stripfestival van Angoulême in [[Vrankryk]]).
 
 [[Categorie: Kortryk]]
+
+[[ast:Morris]]
+[[de:Morris (Comiczeichner)]]
+[[en:Morris (comics)]]
+[[es:Morris (historietista)]]
+[[fi:Morris]]
+[[fr:Morris (auteur)]]
+[[hu:Morris]]
+[[it:Morris (fumettista)]]
+[[nl:Morris (striptekenaar)]]
+[[no:Morris (serieskaper)]]
+[[pl:Maurice de Bevere]]
+[[pt:Morris]]
+[[sv:Maurice de Bévère]]
+[[tr:Morris (çizer)]]
+[[vi:Morris (họa sĩ truyện tranh)]]
