--- a/Brugge.mw
+++ b/Brugge.mw
@@ -46,10 +46,10 @@ D'oekde stad èt de vorme van 'n ei en is entwat van een 430 [[hectoare|ectoarn]
 ==Dêelgemêentn==
 D'ippervlakte van 't stad Brugge is ferme vergrodderd over de joarn. Ieroender è je 'n overzichtje van den angroei (in 't joar van Grôot-Brugge stoan de bygekommen gemêenten aangegeven).
 
-* [[1899]] - gemêente [[Sinte-Pieters-ip-den-Dyk]], wo da ze de wiek [[Sint-Jozef (Brugge)|Sint-Jozef]] ip gebouwd ên.
-* [[1899]] - ton zien ze Lissewege in stikken en brokk'n begunnen der by te pakkn. Ze zien begost met een poar weeên van 't Lisseweegse boeregat Zwankendamme  wo da ze de glasfabrieke en de cokesfabrieke gezet hên, de reste van Zwankendamme ên ze in 1932 der bie gepakt en hêel Lissewege uutendelik in [[1971]]
-* [[1901]] - 't stik van de kuste wo da ze dorachter [[Zêebrugge]] begunn'n bouwn zyn.
-* [[1932]] - de wiek [[Zwankendamme]]
+* [[1899]] - gemêente [[Sinte-Pieters-ip-den-Dyk]], wo da ze de wyk [[Sint-Jozef (Brugge)|Sint-Jozef]] ip gebouwd èn.
+* [[1899]] - ton zyn ze Lissewege in stikken en brokk'n begunnen der by te pakkn. Ze zyn begost met een poar weeën van 't Lisseweegse boeregat Zwankendamme, wo da ze de glasfabrieke en de cokesfabrieke gezet hên, de reste van Zwankendamme èn ze in 1932 der by gepakt en hêel Lissewege uutendelik in [[1971]]
+* [[1901]] - 't stik van de kust wo da ze dorachter [[Zêebrugge]] begunn'n bouwn zyn.
+* [[1932]] - de wyk [[Zwankendamme]]
 * [[1971]] - de gemêenten [[Assebroeke]], [[Dizzêle]], [[Kôolkerke]], [[Lissewege]], [[Sint-Andries]], [[Sinte-Kruus]] en [[Sinte-Machiels]]
 <br>
 {| border="0" style="border: 1px solid #999; background-color:#FFFFFF" summary="Tabel van deelgemeentes van Brugge en hun bevolkingsaantallen"
