--- a/Nauw_van_Kales_(departement).mw
+++ b/Nauw_van_Kales_(departement).mw
@@ -34,3 +34,46 @@ De steedn in et Nauw van Kales mei meer dan 15 000 inweuners zyn [[Atrecht]], [[
 [[Categorie:Departement in Vrankryk]]
 [[Categorie:Nauw van Kales]]
 [[Categorie:Nord-Pas de Calais]]
+
+
+[[an:Paso de Calais (departamento)]]
+[[br:Pas-de-Calais]]
+[[ca:Pas-de-Calais]]
+[[ceb:Pas-de-Calais]]
+[[cv:Па-де-Кале (департамент)]]
+[[cy:Pas-de-Calais]]
+[[da:Pas-de-Calais]]
+[[de:Pas-de-Calais]]
+[[en:Pas-de-Calais]]
+[[eo:Pas-de-Calais]]
+[[es:Paso de Calais (departamento)]]
+[[eu:Pas-de-Calais]]
+[[fi:Pas-de-Calais]]
+[[fr:Pas-de-Calais]]
+[[frp:Pâs-de-Calês]]
+[[gl:Pas-de-Calais]]
+[[id:Pas-de-Calais]]
+[[it:Passo di Calais]]
+[[ja:パ＝ド＝カレー県]]
+[[la:Fretum Calisii]]
+[[lb:Departement Pas-de-Calais]]
+[[lt:Pa de Kalė (departamentas)]]
+[[nds:Pas-de-Calais]]
+[[nl:Pas-de-Calais]]
+[[nn:Pas-de-Calais]]
+[[no:Pas-de-Calais]]
+[[oc:Pas de Calais (departament)]]
+[[pam:Pas-de-Calais]]
+[[pl:Pas-de-Calais]]
+[[pt:Pas-de-Calais]]
+[[ro:Pas-de-Calais]]
+[[ru:Па-де-Кале (департамент)]]
+[[sk:Pas-de-Calais]]
+[[sl:Pas-de-Calais]]
+[[sr:Па де Кале]]
+[[sv:Pas-de-Calais]]
+[[tg:Департаменти Па де Кале]]
+[[uk:Па-де-Кале (департамент)]]
+[[vec:Paso de Calè]]
+[[vi:Pas-de-Calais]]
+[[zh:加来海峡省]]
