--- a/Nesten.mw
+++ b/Nesten.mw
@@ -9,3 +9,5 @@ Ie skildert allesôortn bekende minsn. Ie lôopt olsan barrevoets en zorgde veur
 *[http://www.nesten.be Zyne website]
 
 [[Categorie: West-Vlamsche cartoonist]]
+
+[[nl:Nesten]]
