--- a/Niko_Eeckhout.mw
+++ b/Niko_Eeckhout.mw
@@ -27,3 +27,10 @@ De bienoame van Niko Eeckhout es Rambo.
 *[http://www.nikoeeckhout.be Zinnen website]
 
 [[Categorie:West-Vlamsche coureur|Eeckhout, Niko]]
+
+[[de:Niko Eeckhout]]
+[[en:Niko Eeckhout]]
+[[fr:Niko Eeckhout]]
+[[it:Niko Eeckhout]]
+[[nl:Niko Eeckhout]]
+[[sv:Niko Eeckhout]]
