*Empty MediaWiki Message*

--- a/Brugse_vlagge.mw
+++ b/Brugse_vlagge.mw
@@ -1,9 +1,9 @@
 {{plat|Brugs}}
 
 [[ofbeeldienge:Brugsevlagge2.JPG|thumb|left|Wap'rende Brugsche Vlagge]]
-Beschryvinge van de '''[[Brugge|Brugsche]] vlagge''' volgenst de 'eraldische regels:
+Beschryvinge van de '''[[Brugge|Brugsche]] vlagge''' volgenst de heraldische regels:
 <p>
-Gedwarsbolkt in acht stikken van zilver en keel, 'n klimmenden leeuw van azeur, getoengd en genageld van keel, met 'n ‘olsband van goed met doran un krûstje van goed en gekroand van goed.
+Gedwarsbolkt in acht stikken van zilver en keel, 'n klimmenden leeuw van azeur, getoengd en genageld van keel, met 'n ‘olsband van goud met doran 'n kruustje van goud en gekroand van goud.
 <p>
 Officièl sedert den 1sten juli 1986
 
