--- a/Omer_Karel_De_Laey.mw
+++ b/Omer_Karel_De_Laey.mw
@@ -43,3 +43,5 @@ De Laey et e masse eschreevn, buutn gedichtn oek tonêel, essays en sprooksjes.
 
 [[Categorie: West-Vlamsche schryver]]
 [[Category: Ooglee]]
+
+[[nl:Omer Karel De Laey]]
