--- a/Oostkerke.mw
+++ b/Oostkerke.mw
@@ -2,3 +2,6 @@
 * [[Oostkerke (Damme)|Oostkerke]], e deelgemeente van Damme
 * [[Oostkerke (Diksmude)|Oostkerke]], e deelgemeente van Diksmude
 {{db}}
+
+[[fr:Oostkerke]]
+[[nl:Oostkerke]]
