--- a/Patrick_Sercu.mw
+++ b/Patrick_Sercu.mw
@@ -12,3 +12,12 @@ Patrick Sercu is ereburger van [[Yzegem]].
 [[Categorie:West-Vlamsche coureur|Sercu, Patrick]]
 [[Categorie:Yzegem|Sercu, Patrick]]
 [[Categorie:Roeseloare|Sercu, Patrick]]
+
+[[da:Patrick Sercu]]
+[[de:Patrick Sercu]]
+[[en:Patrick Sercu]]
+[[fr:Patrick Sercu]]
+[[it:Patrick Sercu]]
+[[ja:パトリック・セルキュ]]
+[[nl:Patrick Sercu]]
+[[no:Patrick Sercu]]
