--- a/Brugge.mw
+++ b/Brugge.mw
@@ -112,7 +112,9 @@ De binnestad van Brugge is e musee ip z'n eign, gekend over hêel de wèreld. Br
 
 Van 't schonste in Brugge is te vermelden: d'Olletorre, 't Staduus en d'[[Illig-Bloedbasiliek]] ip de [[Burg (Brugge)|Burg]], de [[Zeruzalemkerke]], d'[[Onze-Lieve-Vrouwekerke (Brugge)|Onze-Lieve-Vrouwekerke]], 't [[Begynof (Brugge)|Begynof]], ...
 
-Êen van de joarlikse evenementn is 't [[Cactusfestival|Cactusfestivol]]. Ieder joar goat met Onsheer hemelvoart d'[[Illig-Bloedprocessie]] uut en mè den viftiensten Oest de processie van Blendetjies. Olle vuuf joar is 't er de [[Gouden Boomstoet]] en alle twi joar de Reiefêesten.
+Ieder joar goat met Onsheer hemelvoart d'[[Illig-Bloedprocessie]] uut en mè den viftiensten Oest de processie van Blendetjies. Olle vuuf joar is 't er de [[Gouden Boomstoet]] en alle twi joar de Reiefêesten.
+
+Êen van de joarlikse evenementn is 't [[Cactusfestival|Cactusfestivol]]. 
 
 In [[Sinte-Machiels]] ligt 't [[Boudewijn Seapark]].
 
