--- a/Paus.mw
+++ b/Paus.mw
@@ -1613,3 +1613,90 @@ Angezien dat er in principe ol sedeert 't joar 33 pausen zyn eet 't systêem ol 
 
 [[Categorie: Christndom]]
 [[Categorie: Paus]]
+
+[[af:Pous]]
+[[als:Papst]]
+[[ang:Pāpa]]
+[[ar:بابوية كاثوليكية]]
+[[ast:Papa]]
+[[az:Papa]]
+[[bar:Papst]]
+[[bat-smg:Puopėžios]]
+[[bg:Папа]]
+[[bn:পোপ]]
+[[br:Pab]]
+[[bs:Papa]]
+[[ca:Papa]]
+[[cs:Papež]]
+[[cy:Pab]]
+[[da:Pave]]
+[[de:Papst]]
+[[el:Πάπας]]
+[[en:Pope]]
+[[eo:Papo]]
+[[es:Papa]]
+[[et:Paavst]]
+[[eu:Aita Santua]]
+[[fa:پاپ]]
+[[fi:Paavi]]
+[[fr:Pape]]
+[[fy:Paus]]
+[[ga:Pápa]]
+[[gd:Pàp]]
+[[gl:Papa]]
+[[he:אפיפיור]]
+[[hr:Papa]]
+[[hu:Pápa (egyházfő)]]
+[[hy:Հռոմի Պապ]]
+[[ia:Papa]]
+[[id:Paus (Katolik Roma)]]
+[[io:Papo]]
+[[is:Páfi]]
+[[it:Papa]]
+[[ja:教皇]]
+[[jv:Paus]]
+[[ka:რომის პაპი]]
+[[ko:교황]]
+[[ku:Papa]]
+[[kw:Pab]]
+[[la:Papa]]
+[[lb:Poopst]]
+[[li:Paus]]
+[[lt:Popiežius]]
+[[lv:Romas pāvests]]
+[[mk:Папа]]
+[[ml:മാര്‍പ്പാപ്പ]]
+[[ms:Paus (Katolik)]]
+[[nds:Paapst]]
+[[nds-nl:Paus]]
+[[nl:Paus]]
+[[nn:Pave]]
+[[no:Pave]]
+[[nrm:Pape]]
+[[pl:Papież]]
+[[pt:Papa]]
+[[qu:Tayta Papa]]
+[[ro:Papă]]
+[[roa-rup:Papa]]
+[[ru:Папство]]
+[[scn:Papa]]
+[[sco:Pape]]
+[[sh:Papa]]
+[[simple:Pope]]
+[[sk:Pápež]]
+[[sl:Papež]]
+[[sq:Papa]]
+[[sr:Папа]]
+[[sv:Påve]]
+[[sw:Papa]]
+[[ta:பாப்பரசர்]]
+[[th:พระสันตะปาปา]]
+[[tl:Papa]]
+[[tpi:Pop]]
+[[tr:Papa]]
+[[uk:Папа Римський]]
+[[ur:پوپ]]
+[[vec:Papa]]
+[[vi:Giáo Hoàng]]
+[[yi:פויבסט]]
+[[zh:教宗]]
