--- a/Paus_Pius_XI.mw
+++ b/Paus_Pius_XI.mw
@@ -29,3 +29,53 @@ Pius XI is gekend omdat y et ''Verdrag van Lateranen'' afsloot me [[Mussolini]] 
 *Ingravescentibus Malis ([[29 september]] [[1937]])
 
 [[Categorie: Paus]]
+
+[[be:Пій XI, папа рымскі]]
+[[bg:Пий XI]]
+[[ca:Pius XI]]
+[[cs:Pius XI.]]
+[[cy:Pab Pïws XI]]
+[[de:Pius XI.]]
+[[en:Pope Pius XI]]
+[[eo:Pio la 11-a]]
+[[es:Pío XI]]
+[[et:Pius XI]]
+[[eu:Pio XI.a]]
+[[fi:Pius XI]]
+[[fr:Pie XI]]
+[[ga:Pápa Pius XI]]
+[[gl:Pío XI, papa]]
+[[he:פיוס האחד עשר]]
+[[hr:Pio XI.]]
+[[hu:XI. Pius pápa]]
+[[id:Paus Pius XI]]
+[[io:Pius 11ma]]
+[[is:Píus 11.]]
+[[it:Papa Pio XI]]
+[[ja:ピウス11世 (ローマ教皇)]]
+[[jv:Paus Pius XI]]
+[[ka:პიუს XI]]
+[[ko:교황 비오 11세]]
+[[la:Pius XI]]
+[[lb:Pius XI. (Poopst)]]
+[[mr:पोप पायस अकरावा]]
+[[nl:Paus Pius XI]]
+[[no:Pius XI]]
+[[oc:Piu XI]]
+[[pl:Papież Pius XI]]
+[[pt:Papa Pio XI]]
+[[ro:Papa Pius al XI-lea]]
+[[ru:Пий XI (папа римский)]]
+[[sk:Pius XI.]]
+[[sl:Papež Pij XI.]]
+[[sq:Papa Pio XI]]
+[[sr:Пије XI]]
+[[sv:Pius XI]]
+[[sw:Papa Pius XI]]
+[[th:สมเด็จพระสันตะปาปาปิอุสที่ 11]]
+[[tl:Pío XI]]
+[[tr:Pius XI]]
+[[uk:Пій XI]]
+[[vec:Papa Pio XI]]
+[[war:Papa Pío XI]]
+[[zh:庇護十一世]]
