--- a/Personal_computer.mw
+++ b/Personal_computer.mw
@@ -22,3 +22,56 @@ De hardware van nen computer zyn olle onderdêeln in of rond dien computer. De h
 Ip nen pc stoat der veel software. Êen van de belangrykste davan is et besteuringssysteem da eindelyk olles ip de computer regelt. De bekenstn is [[Microsoft Windows]], moa der bestoan wok andere besteuringssysteemn: [[Mac OS]], [[Linux]] in ol zyn varianten en ol zuks.
 
 [[Categorie:Informatica]]
+
+[[ar:حاسوب شخصي]]
+[[be:Персанальны камп'ютар]]
+[[bg:Персонален компютър]]
+[[bn:ব্যক্তিগত কম্পিউটার]]
+[[ca:Ordinador personal]]
+[[cs:Osobní počítač]]
+[[da:Personlig computer]]
+[[de:Personal Computer]]
+[[el:Προσωπικός υπολογιστής]]
+[[en:Personal computer]]
+[[eo:Persona komputilo]]
+[[es:Computador personal]]
+[[et:Personaalarvuti]]
+[[fa:رایانه شخصی]]
+[[fi:PC]]
+[[fr:Ordinateur personnel]]
+[[fur:Ordenadôr personâl]]
+[[fy:Persoanlike kompjûter]]
+[[he:מחשב אישי]]
+[[hu:Személyi számítógép]]
+[[ia:Computator personal]]
+[[id:Komputer pribadi]]
+[[is:Einkatölva]]
+[[it:Personal computer]]
+[[ja:パーソナルコンピュータ]]
+[[ka:პერსონალური კომპიუტერი]]
+[[ko:개인용 컴퓨터]]
+[[lt:Asmeninis kompiuteris]]
+[[lv:Personālais dators]]
+[[ml:പെഴ്സണല്‍ കമ്പ്യൂട്ടര്‍]]
+[[mr:व्यक्तिगत संगणक]]
+[[ms:Komputer peribadi]]
+[[nl:Personal computer]]
+[[nn:Personleg datamaskin]]
+[[no:Personlig datamaskin]]
+[[nv:Béésh bee akʼeʼelchí Áłtsisígíí]]
+[[pl:Komputer osobisty]]
+[[pt:Computador pessoal]]
+[[ro:Computer personal]]
+[[ru:Персональный компьютер]]
+[[simple:Personal computer]]
+[[sk:Osobný počítač]]
+[[sr:Лични рачунар]]
+[[sv:Persondator]]
+[[ta:தனி மேசைக் கணினி]]
+[[th:คอมพิวเตอร์ส่วนบุคคล]]
+[[tr:PC]]
+[[uk:Персональний комп'ютер]]
+[[vi:Máy tính cá nhân]]
+[[yi:פערסאנאל קאמפיוטער]]
+[[zh:个人电脑]]
+[[zh-yue:個人電腦]]
