--- a/Philippe_De_Coene.mw
+++ b/Philippe_De_Coene.mw
@@ -10,3 +10,5 @@ In [[1981]] es't ie begonn als [[journalist]] by [[De Morgen]]. Loater, vanof [[
 
 [[Categorie:West-Vlamsche polletieker|De Coene Philippe]]
 [[Categorie:Kortryk|De Coene Philippe]]
+
+[[nl:Philippe De Coene]]
