--- a/Pol_Van_Den_Driessche.mw
+++ b/Pol_Van_Den_Driessche.mw
@@ -17,3 +17,5 @@ Pol Van Den Driessche is een polletieke gazetteschryver die nu en ton e staptje 
 [[Categorie: Journalist|Van Den Driessche, Pol]]
 [[Categorie: TV-presentator|Van Den Driessche, Pol]]
 [[Categorie:Brugge|Van Den Driessche, Pol]]
+
+[[nl:Pol Van Den Driessche]]
