--- a/Polders.mw
+++ b/Polders.mw
@@ -3,3 +3,5 @@ De '''Polders''' es de streke juste achter de zêe. De streke lopt van [[Frans-V
 De streke es hêel vlak, en een typisch gezicht zyn de uutgestrekte veldn me bêestn, ier en doar nen bôom, en een boerderytje. 
 
 [[Categorie: Streke in West-Vloandern]]
+
+[[nl:De Polders]]
